<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:http="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="@dimen/HeaderMargin">

        <ImageView
            style="@style/GravityCentre"
            android:layout_width="@dimen/WeightWidth"
            android:layout_height="@dimen/LogoHeight"
            android:background="@android:color/white"
            android:contentDescription="@string/Logo"
            android:paddingBottom="@dimen/ImageMargin"
            android:paddingTop="@dimen/ImageMargin"
            android:scaleType="centerInside"
            android:src="@drawable/bakerruskinn1" />

        <TextView
            style="@style/GravityCentre"
            android:layout_width="@dimen/WeightWidth"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/QuestionTextSize"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundrotated">

        <LinearLayout
            style="@style/MatchWrap"
            android:orientation="vertical"
            android:paddingTop="@dimen/Question_vertical_margin">

            <TextView
                android:id="@+id/editText0"
                style="@style/DummyTextView">

                <requestFocus />
            </TextView> <!-- dummy view to stop EditText getting focus on launch -->

            <TextView
                style="@style/FirstQuestionStyle"
                android:text="@string/StorageType"
                android:textSize="@dimen/QuestionTextSize" /> <!-- Storage Type Selection -->

            <LinearLayout
                style="@style/MatchWrap"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/Image_T75"
                    style="@style/MediaStyle"
                    android:contentDescription="@string/T75Flask"
                    android:onClick="t75ImageClick"
                    android:src="@drawable/t75_flask" />

                <ImageView
                    android:id="@+id/Well96_Button"
                    style="@style/MediaStyle"
                    android:contentDescription="@string/Well96"
                    android:onClick="well96ImageClick"
                    android:src="@drawable/well_96" />

                <ImageView
                    android:id="@+id/Plate_Button"
                    style="@style/MediaStyle"
                    android:contentDescription="@string/Dish90mm"
                    android:onClick="plate90mmImageClick"
                    android:src="@drawable/plate_90mm" />

            </LinearLayout> <!-- Media Storage Group Images-->

            <RadioGroup
                android:id="@+id/radioGroup1"
                style="@style/AnswerStyle"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/RadioEdge" />

                <RadioButton
                    android:id="@+id/Radio_T75"
                    style="@style/RadioMiddle"
                    android:checked="true"
                    android:onClick="setT75" /> <!-- T75 -->

                <TextView style="@style/RadioMiddle" />

                <RadioButton
                    android:id="@+id/Radio_96well"
                    style="@style/RadioMiddle"
                    android:onClick="set96w" /> <!-- 96 Well -->

                <TextView style="@style/RadioMiddle" />

                <RadioButton
                    android:id="@+id/Radio_90mm"
                    style="@style/RadioEdge"
                    android:onClick="set90mm" /> <!-- 90mm -->

            </RadioGroup> <!-- Media Storage Group Radio Buttons-->

            <View style="@style/HorizontalLine" /> <!-- Line -->

            <TextView
                android:id="@+id/WorkingCapacityText"
                style="@style/QuestionStyle"
                android:text="@string/CapacityTextFlasks"
                android:textSize="@dimen/QuestionTextSize" /> <!-- Working Capacity Text -->

            <EditText
                android:id="@+id/WorkingCapacity"
                style="@style/AnswerStyle"
                android:backgroundTint="@color/colorAccentLightest"
                android:hint="@string/CapacityHintFlasks"
                android:inputType="number"
                android:textSize="@dimen/AnswerTextSie" /> <!-- Working Capacity Input -->

            <View style="@style/HorizontalLine" /> <!-- Line -->

            <TextView
                android:id="@+id/InterlockCapacityText"
                style="@style/QuestionStyle"
                android:text="@string/CapacityInterlockFlasks"
                android:textSize="@dimen/QuestionTextSize" /> <!-- Interlock Volume Text-->

            <RadioGroup
                android:id="@+id/radioGroup2"
                style="@style/AnswerStyle"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/IntSize1"
                    style="@style/Radio2"
                    android:checked="true"
                    android:text="@string/IntBBFlask" />

                <RadioButton
                    android:id="@+id/IntSize2"
                    style="@style/Radio2"
                    android:text="@string/IntBBplusFlask" />

                <RadioButton
                    android:id="@+id/IntSize3"
                    style="@style/Radio2"
                    android:text="@string/IntNuvoSmlFlask" />

                <RadioButton
                    android:id="@+id/IntSize4"
                    style="@style/Radio2"
                    android:text="@string/IntNuvoLgeFlask" />

                <RadioButton
                    android:id="@+id/IntSize5"
                    style="@style/Radio2"
                    android:text="@string/IntNuvoDualFlask" />

                <RadioButton
                    android:id="@+id/IntSize6"
                    style="@style/Radio2"
                    android:text="@string/IntSciFlask" />

            </RadioGroup>  <!-- Interlock Volume Group -->

            <View style="@style/HorizontalLine" /> <!-- Line -->

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/OperatingGas"
                android:textSize="@dimen/QuestionTextSize" /> <!-- Operating Gas Text -->

            <LinearLayout
                style="@style/AnswerStyle"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/Check_Anaerobic"
                    style="@style/CheckBox"
                    android:text="@string/Anaerobic" />

                <CheckBox
                    android:id="@+id/Check_Hypoxic"
                    style="@style/CheckBox"
                    android:text="@string/Physiological" />

                <CheckBox
                    android:id="@+id/Check_Hyperoxic"
                    style="@style/CheckBox"
                    android:text="@string/Hyperoxic" />

            </LinearLayout> <!-- Operating Gas CheckBoxes -->

            <Button
                android:id="@+id/submit"
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/Question_vertical_margin"
                android:onClick="submit"
                android:paddingBottom="@dimen/Question_vertical_margin"
                android:text="@string/Submit" /> <!-- Submit Button -->

        </LinearLayout>

    </ScrollView>
</LinearLayout>